--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "auditfox",
-  "version": "2.0.0",
+  "name": "auditfox-v1.0",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,12 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^123.0.1",
     "axe-core": "^4.9.1",
-    "chrome-aws-lambda": "^10.1.0",
     "pdfkit": "^0.15.0",
-    "puppeteer-core": "^10.1.0"
-  },
-  "devDependencies": {
-    "puppeteer": "^22.12.1"
+    "puppeteer-core": "^22.12.1"
   }
 }
