--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "functions": {
-    "api/audit.js": {
-      "maxDuration": 30
-    },
-    "api/create-pdf.js": {
-      "maxDuration": 30
+    "api/**/*.js": {
+      "maxDuration": 45
     }
   }
 }
