--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "chmod +x install-deps.sh && ./install-deps.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
