--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "chmod +x install-deps.sh && ./install-deps.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sparticuz/chromium": "^123.0.1",
+    "@sparticuz/chromium": "123.0.1",
     "axe-core": "^4.9.1",
     "pdfkit": "^0.15.0",
     "puppeteer-core": "^22.12.1"
