--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
-    {
-      "name": "auditfox-v1.0",
-      "version": "1.0.0",
-      "description": "",
-      "main": "index.js",
-      "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-      },
-      "keywords": [],
-      "author": "",
-      "license": "ISC",
-      "dependencies": {
-        "axe-core": "^4.9.1",
-        "pdfkit": "^0.15.0",
-        "puppeteer": "^22.12.1"
-      }
-    }
+ {
+  "name": "auditfox-v1.0",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axe-core": "^4.9.1",
+    "pdfkit": "^0.15.0",
+    "puppeteer-core": "^22.12.1"
+  }
+}
+
     
