--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
- {
-  "name": "auditfox-v1.0",
+{
+  "name": "auditfox-final",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "DSGVO & Accessibility Audit Tool",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,9 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "axe-core": "^4.9.1",
-    "pdfkit": "^0.15.0",
-    "puppeteer-core": "^22.12.1"
+    "pdfkit": "^0.15.0"
   }
 }
-
-    
