--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "pdfkit": "^0.15.0"
+    "axe-core": "^4.9.1",
+    "pdfkit": "^0.15.0",
+    "puppeteer-core": "^22.12.1"
   }
 }
